K8s_demos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: my-app-namespace
spec:
  type: LoadBalancer
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
